# miso-numeron

./: .gitignore  Makefile  README.md  algorithm.tex  cabal.project  flake.nix  miso-numeron.cabal
.github/workflows/: deploy.yml  lint.yml
docs/: index.html  index.js
src/: Main.hs
src/Game/: Actions.hs  CPU.hs  Config.hs  Input.hs  Model.hs  Number.hs  State.hs  Types.hs  Update.hs  View.hs
src/Game/Strategy/: Level1.hs  Level2.hs  Level3.hs
